<resources>
    <string name="app_name">Man Ki Job</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>

    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="app_name1">Splash</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings1">Settings</string>
    <string name="text_Signup">Signup</string>

    <string name="action_settings">Settings</string>
    <string name="we">Welcome!!</string>
    <string name="lo">Login</string>
    <string name="si">Signup</string>
    <string-array name="spinner_lang">
        <item>Select language</item>
        <item>हिंदी</item>
        <item>English</item>
    </string-array>
</resources>
