<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.user.mankijob.activities.HomeActivity"
    tools:showIn="@layout/app_bar_home">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178"
        android:id="@+id/textView2" />

    <Button
        android:id="@+id/homeLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/homeSignup"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="75dp" />

    <Button
        android:id="@+id/homeSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/si"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="150dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="201dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        android:entries="@array/spinner_lang"/>

</android.support.constraint.ConstraintLayout>
